backend: create api documentation and user role